# keystone

./: .clang-format  .fast-setup.sh  .gdbinit  .gitignore  .gitmodules  .prebuilt_tools_shasums  .readthedocs.yml  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CODING_GUIDELINES  CODING_STYLE  CONTRIBUTING.md  CVA6_INSTALL.md  KEYSTONE-FPGA.md  Makefile  README.md  STATIC_PYTHON.md  apply-patch.sh  assert.h  attest.c  build.sh  busybear.mk  copy_sdk_bin.sh  copy_sdk_lib.sh  cpu.c  cpu.h  crypto.c  crypto.h  debug.sh  enclave.c  enclave.h  enclave_syscall.c  enclave_syscall.h  env.c  fast-setup.sh  gdb.sh  hifive.mk  io_wrap.h  ipi.c  (+43 more)
bootrom/: .gitignore  CMakeLists.txt  Makefile  bootloader.S  bootloader.c  bootloader.lds  bootrom.asm  sanctum_params.lds  string.c  string.h  use_test_keys.h
bootrom/ed25519/: ed25519.h  ge.c  ge.h  keypair.c  sign.c  verify.c
bootrom/sha256/: sha256.c
bootrom/sha3/: sha3.c  sha3.h
examples/: CMakeLists.txt
examples/attestation/: CMakeLists.txt
examples/attestation/host/: attestor-runner.cpp  host.cpp  host.h  verifier.cpp  verifier.h
examples/devshare/: CMakeLists.txt
examples/devshare/eapp/: devshare.c
examples/devshare/host/: host.cpp
examples/hello/: CMakeLists.txt  vault.sh
examples/hello-lpmp/: CMakeLists.txt
examples/hello-lpmp/eapp/: hello_lpmp.c
examples/hello-lpmp/host/: host_lpmp.cpp
examples/hello-native/: CMakeLists.txt  vault.sh
examples/hello-native/eapp/: Makefile  eapp_native.c
examples/hello-native/host/: Makefile  host_native.cpp
examples/hello/eapp/: Makefile
examples/hello/host/: Makefile  host.cpp
examples/maps/: CMakeLists.txt  run.sh
examples/maps/eapp/: callee.c  caller.c
examples/maps/host/: host.cpp
examples/openssl-download/: CMakeLists.txt  run.sh
examples/openssl-download/eapp/: downloader.c  downloader.c.txt
examples/openssl-download/host/: downloader-host.cpp
examples/ports/: CMakeLists.txt  run.sh
examples/ports/eapp/: receiver.c  sender.c
examples/tests/: CMakeLists.txt  app.lds  edge_wrapper.cpp  edge_wrapper.h  test-runner.cpp  vault.sh
examples/tests/attestation/: Makefile  edge_wrapper.c  edge_wrapper.h
examples/tests/data-sealing/: data-sealing.c  data-sealing.h  data-sealing_with_output.c
examples/tests/fib-bench/: Makefile  fib-bench.c
examples/tests/fibonacci/: Makefile  fibonacci.c
examples/tests/long-nop/: add_long.s  func_base.s  func_long.s  generate_func.sh  long-nop.S
examples/tests/loop/: Makefile
examples/tests/malloc/: Makefile  malloc.c
examples/tests/stack/: stack.S
examples/tests/untrusted/: untrusted.c
examples/vta/: CMakeLists.txt
examples/vta/bins/: files.txt
examples/vta/eapp/: vta.cc
examples/vta/host/: host.cpp
examples/vta/include/: images.h  interface.h  platform.h
examples/vta/scripts/: .gitignore  fixup_params.py  generate_model.py  run.sh
lib/: CMakeLists.txt  Makefile
lib/app/: CMakeLists.txt  Makefile
lib/app/include/: eapp_utils.h  edge_call.h  (+2 more)
lib/edge/: CMakeLists.txt  Makefile
lib/host/: CMakeLists.txt  Makefile
lib/verifier/: CMakeLists.txt  Makefile  keys.cpp  keys.h  report.cpp  report.h  test.cpp  test_dev_key.h
runtime/: .clang-format  .fast-setup.sh  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  SDK_MIN_REVISION  aes.c  boot.c  build.sh  common.h  elf.h  entry.S  env.c  env.h  fatal.c  fatal.h  freemem.c  freemem.h  fuzzy_buff.c  fuzzy_buff.h  interrupt.c  interrupt.h  io_wrap.c  io_wrap.h  keystone-rt.readelf  linux_wrap.c  linux_wrap.h  merkle.c  merkle.h  mm.c  mm.h  net_wrap.c  net_wrap.h  page_fault.c  page_swap.c  paging.c  (+20 more)
runtime/.circleci/: config.yml
runtime/call/: CMakeLists.txt  callee.S  callee.c  io_wrap.c  linux_wrap.c  net_wrap.c  net_wrap.c.orig  sbi.c  syscall.c
runtime/crypto/: CMakeLists.txt  aes.c  merkle.c  sha256.c
runtime/drivers/: CMakeLists.txt  cma.c  drivers.c  serial.c  vta.c
runtime/loader/: CMakeLists.txt  elf.c  elf32.c  elf64.c  loader.c
runtime/loader-binary/: CMakeLists.txt  Makefile  build.sh  common.h  elf.c  elf32.c  elf32.h  elf64.c  elf64.h  flatten_includes.py  loader-binary.c  loader.S  loader.c  loader.h  loader.lds  mem.c  mem.h  mm.c  mm.h  printf.c  printf.h  sbi.c  string.c  string.h  vm.c  vm.h  vm_defs.h
runtime/mm/: CMakeLists.txt  freemem.c  freemem_ld.c  mm.c  page_swap.c  paging.c  vm.c
runtime/sys/: CMakeLists.txt  boot.c  entry.S  env.c  fuzzy_buff.c  interrupt.c
runtime/test/: CMakeLists.txt  merkle.c  mock.h  page_swap.c  string.c
runtime/tmplib/: CMakeLists.txt  Makefile  README  partial_linkage.h  uaccess.S  uaccess.h  uio.h
runtime/util/: CMakeLists.txt  printf.c  rt_util.c  spinlock.S  string.c
sdk/.post-install/: CMakeLists.txt
sdk/examples/: CMakeLists.txt
sdk/src/: CMakeLists.txt
sm/tests/: CMakeLists.txt  test_pmp.c
src/: .sm-sbi.c.swp  CMakeLists.txt  crypto.h  enclave.c  enclave.h  ipi.c  ipi.h  keystone.cpp  mprv.h  platform-hook.h  pmp.c  pmp.h  sbi_trap_hack.c  sm-sbi.c  sm-sbi.h  sm.c  sm.h  thread.c
src/app/: string.c  tiny-malloc.c
src/common/: sha3.c
src/ed25519/: ed25519.h  keypair.c
src/edge/: edge_call.c  edge_syscall.c
src/host/: Enclave.cpp  Memory.cpp  elf.c  elf32.c  elf64.c  hash_util.cpp
src/plugins/: multimem.h  plugins.c  plugins.h
src/sha3/: sha3.c  sha3.h
src/verifier/: Report.cpp  json11.cpp
tests/: CMakeLists.txt  Makefile  app.lds  app.mk  edge_wrapper.cpp  edge_wrapper.h  keystone_test.cpp  pmp_test.c  test-runner.cpp  test_enclave.c  test_pmp.c
tests/attestation/: Makefile  attestation.c  edge_wrapper.c  edge_wrapper.h
tests/c/: Makefile  c.c
tests/fib-bench/: fib-bench.c
tests/fibonacci/: fibonacci.c
tests/long-nop/: Makefile  nop.s
tests/malloc/: malloc.c
tests/mock/: machine.c  mprv.c  opensbi.c
tests/scripts/: setup_binary.sh  setup_test.sh
tests/test_binary/: CMakeLists.txt  eyrie-rt  stack.eapp_riscv
tests/tests/: .gitignore  Makefile  app.mk  edge_wrapper.cpp  edge_wrapper.h  test-runner.cpp  vault.sh
tests/untrusted/: Makefile  edge_wrapper.c  edge_wrapper.h  untrusted.c
(+844 files in other folders)
